[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/EBMain.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/BottleRocket.tres" type="DynamicFont" id=2]
[ext_resource path="res://Graphics/UI/Overworld/flavours/defaultbox.png" type="Texture" id=3]
[ext_resource path="res://Graphics/UI/Inventory/characters/ninten.png" type="Texture" id=4]
[ext_resource path="res://Scripts/UI/SaveSelection/saveFile.gd" type="Script" id=6]
[ext_resource path="res://Shaders/MenuFlavorShader.gdshader" type="Shader" id=7]
[ext_resource path="res://Nodes/Ui/arrow.tscn" type="PackedScene" id=8]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 7 )
shader_param/OLDCOLOR1 = Color( 0.952941, 0.94902, 0.956863, 1 )
shader_param/NEWCOLOR1 = Color( 0.517647, 0.909804, 0.952941, 1 )
shader_param/OLDCOLOR2 = Color( 0.74902, 0.705882, 0.803922, 1 )
shader_param/NEWCOLOR2 = Color( 0.620556, 0.709364, 0.878906, 1 )
shader_param/OLDCOLOR3 = Color( 0.478431, 0.423529, 0.52549, 1 )
shader_param/NEWCOLOR3 = Color( 0.482353, 0.545098, 0.8, 1 )
shader_param/OLDCOLOR4 = Color( 0.0784314, 0.0666667, 0.0901961, 1 )
shader_param/NEWCOLOR4 = Color( 0.192157, 0.0745098, 0.0196078, 1 )
shader_param/OLDCOLOR5 = Color( 0.729412, 0.32549, 0.894118, 1 )
shader_param/NEWCOLOR5 = Color( 0.819608, 0.713726, 0.129412, 1 )

[node name="file1" type="NinePatchRect"]
material = SubResource( 1 )
margin_right = 256.0
margin_bottom = 69.0
rect_min_size = Vector2( 256, 69 )
texture = ExtResource( 3 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
script = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 24.0
margin_top = 51.0
margin_right = -15.0
margin_bottom = 62.0
grow_horizontal = 2
custom_constants/separation = 5

[node name="Play" type="Label" parent="HBoxContainer"]
margin_right = 68.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 2 )
text = "SAVE_PLAY"

[node name="Spacer" type="Label" parent="HBoxContainer"]
margin_left = 73.0
margin_right = 73.0
margin_bottom = 11.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )

[node name="Copy" type="Label" parent="HBoxContainer"]
margin_left = 78.0
margin_right = 147.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 2 )
text = "SAVE_COPY"

[node name="Spacer2" type="Label" parent="HBoxContainer"]
margin_left = 152.0
margin_right = 152.0
margin_bottom = 11.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )

[node name="Delete" type="Label" parent="HBoxContainer"]
margin_left = 157.0
margin_right = 238.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 2 )
text = "SAVE_DELETE"

[node name="Spacer3" type="Label" parent="HBoxContainer"]
margin_left = 243.0
margin_right = 243.0
margin_bottom = 11.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )

[node name="Options" type="Label" parent="HBoxContainer"]
margin_left = 248.0
margin_right = 347.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 2 )
text = "SAVE_SETTINGS"

[node name="Name" type="Label" parent="."]
margin_left = 43.0
margin_top = 17.0
margin_right = 91.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 1 )
text = "Player"

[node name="Level" type="Label" parent="."]
margin_left = 101.0
margin_top = 14.0
margin_right = 136.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 2 )
text = "LV100"

[node name="Title" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -116.0
margin_top = 10.0
margin_right = -68.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 1 )
text = "Location"

[node name="Time" type="RichTextLabel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -116.0
margin_top = 24.0
margin_right = 1.0
margin_bottom = 50.0
size_flags_vertical = 0
custom_constants/line_separation = -1
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "SAVE_TIME"
text = "SAVE_TIME"
scroll_active = false

[node name="icons" type="HBoxContainer" parent="."]
margin_top = 5.0
margin_right = 60.0
margin_bottom = 45.0
custom_constants/separation = 20

[node name="Control1" type="Control" parent="icons"]
margin_bottom = 40.0

[node name="picon1" type="Sprite" parent="icons/Control1"]
position = Vector2( 30, 16 )
texture = ExtResource( 4 )

[node name="Control2" type="Control" parent="icons"]
visible = false
margin_left = 20.0
margin_right = 20.0
margin_bottom = 40.0

[node name="picon2" type="Sprite" parent="icons/Control2"]
position = Vector2( 10, 36 )
texture = ExtResource( 4 )

[node name="Control3" type="Control" parent="icons"]
visible = false
margin_left = 20.0
margin_right = 20.0
margin_bottom = 40.0

[node name="picon3" type="Sprite" parent="icons/Control3"]
position = Vector2( 10, 36 )
texture = ExtResource( 4 )

[node name="Control4" type="Control" parent="icons"]
visible = false
margin_left = 20.0
margin_right = 20.0
margin_bottom = 40.0

[node name="picon4" type="Sprite" parent="icons/Control4"]
position = Vector2( 10, 36 )
texture = ExtResource( 4 )

[node name="Control5" type="Control" parent="icons"]
visible = false
margin_left = 20.0
margin_right = 20.0
margin_bottom = 40.0

[node name="picon5" type="Sprite" parent="icons/Control5"]
position = Vector2( 10, 36 )
texture = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -119.0
margin_top = 8.0
margin_right = -118.0
margin_bottom = 50.0
color = Color( 0.478431, 0.423529, 0.52549, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -119.0
margin_top = 23.0
margin_right = -7.0
margin_bottom = 24.0
color = Color( 0.478431, 0.423529, 0.52549, 1 )

[node name="Options" type="ColorRect" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -118.0
margin_top = 7.0
margin_right = -6.0
margin_bottom = 52.0
color = Color( 0.0784314, 0.0666667, 0.0901961, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
margin_left = 11.0
margin_top = 2.0
margin_right = 108.0
margin_bottom = 42.0
custom_constants/separation = 2

[node name="TextSpeed" type="Label" parent="Options/VBoxContainer"]
margin_right = 97.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 1 )
text = "MENU_TEXTSPEED"

[node name="MenuFlavor" type="Label" parent="Options/VBoxContainer"]
margin_top = 14.0
margin_right = 97.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 1 )
text = "MENU_FLAVORS"

[node name="ButtonPrompts" type="Label" parent="Options/VBoxContainer"]
margin_top = 28.0
margin_right = 97.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 1 )
text = "MENU_PROMPTS"

[node name="arrow" parent="." instance=ExtResource( 8 )]
position = Vector2( 18, 58 )
menu_parent_path = NodePath("../HBoxContainer")
cursor_offset = Vector2( -4, 3 )
consume_input_events = true
loop_around = true
skip_empty_labels = true
move_sfx = true
select_sfx = true
cancel_sfx = true
cancel_on = true
reset_on_show = false

[node name="NoData" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
margin_left = 13.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = 63.0
color = Color( 0.0784314, 0.0666667, 0.0901961, 1 )

[node name="Label" type="Label" parent="NoData"]
anchor_right = 1.0
margin_left = -7.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 2 )
text = "SAVE_NODATA"
align = 1
valign = 1

[node name="FileNum" type="Label" parent="."]
margin_left = 7.0
margin_top = 3.0
margin_right = 67.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 2 )
text = "1"

[connection signal="cancel" from="arrow" to="." method="_on_arrow_cancel"]
[connection signal="selected" from="arrow" to="." method="_on_arrow_selected"]
